edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message MitreTactic {
  string id = 1;
  string name = 2;
  string description = 3;
}

message MitreTechnique {
  string id = 1;
  string name = 2;
  string description = 3;
}

message MitreAttackVector {
  MitreTactic tactic = 1;
  repeated MitreTechnique techniques = 2 [lazy = true];
}

message MitreAttackMatrix {
  message MatrixInfo {
    string domain = 1;
    string platform = 2;
  }

  MatrixInfo matrix_info = 1;
  repeated MitreAttackVector vectors = 2 [lazy = true];
}

message MitreAttackBundle {
  string version = 1;
  repeated MitreAttackMatrix matrices = 2 [lazy = true];
}
